--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ venv
 /resources/plots/
 /resources/csv/flowshop_best.csv
 /resources/csv/flowshop_worst.csv
+/resources/csv/best.csv
+/resources/csv/worst.csv
